<resources>
    <string name="app_name">VoiceTutor</string>
</resources>